<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_item1"
        android:icon="@drawable/ic_home"
        android:title="@string/item_one"/>
    <item
        android:id="@+id/action_item2"
        android:icon="@drawable/ic_offers"
        android:title="@string/item_two"/>
    <item
        android:id="@+id/action_item3"
        android:icon="@drawable/ic_profile"
        android:title="@string/item_three"/>
    <item
        android:id="@+id/action_item4"
        android:icon="@drawable/ic_stores"
        android:title="@string/item_four"/>
    <item
        android:id="@+id/action_item5"
        android:icon="@drawable/ic_nearby"
        android:title="@string/item_five"/>

</menu>